WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
46687
[chromium] Increase warning level for chromium linux build
https://bugs.webkit.org/show_bug.cgi?id=46687
Summary
[chromium] Increase warning level for chromium linux build
James Robinson
Reported
2010-09-27 19:00:53 PDT
[chromium] Increase warning level for chromium linux build
Attachments
Patch
(12.96 KB, patch)
2010-09-27 19:06 PDT
,
James Robinson
no flags
Details
Formatted Diff
Diff
Patch
(12.86 KB, patch)
2010-09-28 14:41 PDT
,
James Robinson
tony
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
James Robinson
Comment 1
2010-09-27 19:06:35 PDT
Created
attachment 69009
[details]
Patch
Nico Weber
Comment 2
2010-09-27 20:38:13 PDT
Comment on
attachment 69009
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=69009&action=review
> WebCore/WebCore.gyp/WebCore.gyp:247 > # enable -Wall and -Werror, just in Mac build for now
update this comment?
> WebCore/platform/chromium/ScrollbarThemeChromiumLinux.cpp:118 > + || ((direction == PlatformThemeChromiumGtk::East || direction == PlatformThemeChromiumGtk::South) && scrollbar->currentPos() != scrollbar->maximum()))
This looks overparenthesized. What's the warning without this?
Adam Langley
Comment 3
2010-09-28 07:20:41 PDT
LGTM, although I also wonder about the additional ( )
Tony Chang
Comment 4
2010-09-28 09:53:55 PDT
(In reply to
comment #2
)
> (From update of
attachment 69009
[details]
) > View in context:
https://bugs.webkit.org/attachment.cgi?id=69009&action=review
> > > WebCore/WebCore.gyp/WebCore.gyp:247 > > # enable -Wall and -Werror, just in Mac build for now > > update this comment? > > > WebCore/platform/chromium/ScrollbarThemeChromiumLinux.cpp:118 > > + || ((direction == PlatformThemeChromiumGtk::East || direction == PlatformThemeChromiumGtk::South) && scrollbar->currentPos() != scrollbar->maximum())) > > This looks overparenthesized. What's the warning without this?
There's an a || b && c in there which makes the second pair of () that james added necessary. I think we can drop the first pair of ().
Tony Chang
Comment 5
2010-09-28 09:54:27 PDT
Comment on
attachment 69009
[details]
Patch r=me with review comments addressed
James Robinson
Comment 6
2010-09-28 12:51:59 PDT
gcc requires "a || b && c" have parens around the "b && c" part. The rest of the parens on that line are needed, I believe the rest of the parens are still needed. However I forgot to check in debug as well. Will update.
James Robinson
Comment 7
2010-09-28 12:52:20 PDT
Comment on
attachment 69009
[details]
Patch Missed some.
James Robinson
Comment 8
2010-09-28 14:41:03 PDT
Created
attachment 69106
[details]
Patch
James Robinson
Comment 9
2010-09-28 14:41:44 PDT
Fixed the comment in the .gyp and drops one set of parens from ScrollbarThemeChromiumLinux.cpp.
James Robinson
Comment 10
2010-09-28 14:49:06 PDT
Committed
r68564
: <
http://trac.webkit.org/changeset/68564
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug