2010-09-27  James Robinson  <jamesr@chromium.org>

Reviewed by Tony Chang.

        [chromium] Increase warning level for chromium linux build
        https://bugs.webkit.org/show_bug.cgi?id=46687

        This sets the chromium_code gyp variable to 1 for the chromium
        linux WebCore build and fixes the warnings that exposes.  This
        matches the chromium mac build's compiler settings more closely
        and should cut down on the number of patches that break mac but
        compile cleaning on linux.

        * WebCore.gyp/WebCore.gyp:
        * platform/chromium/ScrollbarThemeChromiumLinux.cpp:
        (WebCore::ScrollbarThemeChromiumLinux::paintButton):
        * platform/graphics/chromium/FontLinux.cpp:
        (WebCore::TextRunWalker::nextScriptRun):
        (WebCore::TextRunWalker::getTextRun):
        (WebCore::TextRunWalker::getNormalizedTextRun):
        (WebCore::TextRunWalker::setGlyphXPositions):
        (WebCore::glyphIndexForXPositionInScriptRun):
        (WebCore::Font::offsetForPositionForComplexText):
        (WebCore::Font::selectionRectForComplexText):
        * platform/graphics/chromium/HarfbuzzSkia.cpp:
        (WebCore::getOutlinePoint):
        * platform/graphics/chromium/LayerRendererChromium.cpp:
        (WebCore::LayerRendererChromium::updateRootLayerTextureRect):
        * platform/graphics/gpu/Texture.cpp:
        (WebCore::copySubRect):
        * platform/graphics/skia/PlatformContextSkia.cpp:
        (WebCore::PlatformContextSkia::readbackHardwareToSoftware):
        * platform/image-decoders/gif/GIFImageDecoder.cpp:
        (WebCore::GIFImageDecoder::setSize):
        * platform/image-decoders/gif/GIFImageDecoder.h:

Canonical link: https://commits.webkit.org/59251@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@68564 268f45cc-cd09-0410-ab3c-d52691b4dbfc