WebCore/platform/image-decoders/gif/GIFImageDecoder.cpp
@@ -60,7 +60,7 @@ bool GIFImageDecoder::isSizeAvailable()
     return ImageDecoder::isSizeAvailable();
 }
 
-bool GIFImageDecoder::setSize(unsigned width, unsigned height)
+bool GIFImageDecoder::setSize(int width, int height)
 {
     if (ImageDecoder::isSizeAvailable() && size().width() == width && size().height() == height)
         return true;
